--- a/src/rawassets/config.json
+++ b/src/rawassets/config.json
@@ -68,6 +68,12 @@
         "data": {}
       },
       {
+        "data_type": "TimeLimitDef",
+        "data": {
+          "timelimit": 3.0
+        }
+      },
+      {
         "data_type": "TransformDef",
         "data": {
           "scale": {
@@ -80,7 +86,7 @@
       {
         "data_type": "RenderMeshDef",
         "data": {
-          "source_file": "meshes/sushi_a.fplmesh",
+          "source_file": "meshes/sushi_b.fplmesh",
           "shader": "shaders/textured"
         }
       },
@@ -91,27 +97,33 @@
     ]
   },
 
-  "fern_def": {
+
+  "splatter_particle_def": {
     "component_list": [
+      {
+        "data_type": "PhysicsDef",
+        "data": {}
+      },
+      {
+        "data_type": "TimeLimitDef",
+        "data": {
+          "timelimit": 1.5
+        }
+      },
       {
         "data_type": "TransformDef",
         "data": {
           "scale": {
-            "x": 350.0,
-            "y": 350.0,
-            "z": 350.0
-          },
-          "orientation": {
-            "x": 0.0,
-            "y": -90.0,
-            "z": 0.0
+            "x": 20.0,
+            "y": 20.0,
+            "z": 20.0
           }
         }
       },
       {
         "data_type": "RenderMeshDef",
         "data": {
-          "source_file": "meshes/fern_c.fplmesh",
+          "source_file": "meshes/sushi_a.fplmesh",
           "shader": "shaders/textured"
         }
       }
@@ -121,6 +133,110 @@
   "world_editor_config" : {
     "viewport_angle_degrees":90,
     "movement_speed":1
-  }
+  },
 
+  "patron_def": {
+    "component_list": [
+      {
+        "data_type": "TransformDef",
+        "data": {
+          "scale": {
+            "x": 1.0,
+            "y": 1.0,
+            "z": 1.0
+          },
+        }
+      },
+      {
+        "data_type": "RenderMeshDef",
+        "data": {}
+      },
+      {
+        "data_type": "FamilyDef",
+        "data": {
+          "children": [
+            {
+              "component_list": [
+                {
+                  "data_type": "TransformDef",
+                  "data": {
+                    "scale": {
+                      "x": 350.0,
+                      "y": 350.0,
+                      "z": 350.0
+                    },
+                    "position": {
+                        "x": 0.0,
+                        "y": 0.0,
+                        "z": 20.0
+                      },
+                    "orientation": {
+                      "x": 0.0,
+                      "y": -90.0,
+                      "z": 0.0
+                    }
+                  }
+                },
+                {
+                  "data_type": "RenderMeshDef",
+                  "data": {
+                    "source_file": "meshes/fern_c.fplmesh",
+                    "shader": "shaders/textured"
+                  }
+                },
+              ]
+            }
+          ]
+        }
+      },
+      {
+        "data_type": "PatronDef",
+        "data": { }
+      }
+    ]
+  },
+
+  "fern_def": {
+    "component_list": [
+      {
+        "data_type": "TransformDef",
+        "data": {
+          "scale": {
+            "x": 400.0,
+            "y": 400.0,
+            "z": 400.0
+          },
+        }
+      },
+      {
+        "data_type": "RenderMeshDef",
+        "data": {
+          "source_file": "meshes/fern_b.fplmesh",
+          "shader": "shaders/textured"
+         }
+      },
+    ]
+  },
+
+  "fern2_def": {
+    "component_list": [
+      {
+        "data_type": "TransformDef",
+        "data": {
+          "scale": {
+            "x": 400.0,
+            "y": 400.0,
+            "z": 400.0
+          },
+        }
+      },
+      {
+        "data_type": "RenderMeshDef",
+        "data": {
+          "source_file": "meshes/fern_a.fplmesh",
+          "shader": "shaders/textured"
+         }
+      },
+    ]
+  }
 }
