--- a/src/rawassets/config.json
+++ b/src/rawassets/config.json
@@ -35,7 +35,7 @@
                     "data_type": "RenderMeshDef",
                     "data" : {
                       "source_file":"meshes/sushi_a.fplmesh",
-                      "shader": "shaders/cardboard"
+                      "shader": "shaders/textured"
                     }
                   }
                 ]
@@ -53,7 +53,7 @@
           "data_type": "RenderMeshDef",
           "data" : {
             "source_file":"meshes/sushi_a.fplmesh",
-            "shader": "shaders/cardboard"
+            "shader": "shaders/textured"
           }
         }
       ]
@@ -81,7 +81,7 @@
         "data_type": "RenderMeshDef",
         "data": {
           "source_file": "meshes/sushi_a.fplmesh",
-          "shader": "shaders/cardboard"
+          "shader": "shaders/textured"
         }
       },
       {
@@ -112,7 +112,7 @@
         "data_type": "RenderMeshDef",
         "data": {
           "source_file": "meshes/fern_c.fplmesh",
-          "shader": "shaders/cardboard"
+          "shader": "shaders/textured"
         }
       }
     ]
