Add skeleton of world editor on desktop. F10 to toggle.
Currently not implemented to do anything except change camera FOV
when you enter the editor (and pause all component updates).

Change-Id: Ibf6c4891fad93ae6b2333037bb2ef80b667c5872

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -153,6 +153,8 @@ set(zooshi_SRCS
     src/components/rendermesh.h
     src/components/transform.cpp
     src/components/transform.h
+    src/editor/world_editor.h
+    src/editor/world_editor.cpp
     src/entity/component.h
     src/entity/component_id_lookup.h
     src/entity/component_interface.h
