Added Sound and Listener components.
A sound component is for playing any continuous sound at an entity's
position (such as the whooshing sound made from throwing sushi. Also for
things like campfires).

A listener component is determines where the audio engine listener is
going to be. Like the sound component, the listener is set to the
entity's position.

Also updated the data to set the listener on player entity and sounds on
projectiles.

Change-Id: I1721bba32b2ba27685ff2754fa7dfff344fcb6a1

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -139,6 +139,8 @@ add_custom_command(TARGET assets POST_BUILD
 set(zooshi_SRCS
     src/camera.cpp
     src/camera.h
+    src/components/audio_listener.cpp
+    src/components/audio_listener.h
     src/components/family.cpp
     src/components/family.h
     src/components/patron.cpp
@@ -153,6 +155,8 @@ set(zooshi_SRCS
     src/components/rail_denizen.h
     src/components/rendermesh.cpp
     src/components/rendermesh.h
+    src/components/sound.cpp
+    src/components/sound.h
     src/components/time_limit.cpp
     src/components/time_limit.h
     src/components/transform.cpp
