Added a score component that tracks players scores.
Currently the scores are tracked but nothing is done with them.

Patrons now broadcast events when hit: When a patron is hit, they
broadcast an event announcing they've been hit. They also broadcast an
event that states whether they were hit in the mouth or on their body.
Additionally, an event is broadcast when a projectile is fired.

The score component has been added to the game state and is hooked up to
the event manager.

Tested on Linux.
Bug: 20821045

Change-Id: Ib7705219940ae92fce6835c27328ad311456066c

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -153,6 +153,8 @@ set(zooshi_SRCS
     src/components/rail_denizen.h
     src/components/rendermesh.cpp
     src/components/rendermesh.h
+    src/components/score.cpp
+    src/components/score.h
     src/components/sound.cpp
     src/components/sound.h
     src/components/time_limit.cpp
@@ -175,7 +177,11 @@ set(zooshi_SRCS
     src/event_system/event_payload.h
     src/event_system/event_registry.h
     src/events/audio_event.h
+    src/events/entity_event.h
     src/events/event_ids.h
+    src/events/patron_collision_event.h
+    src/events/patron_fed_event.h
+    src/events/projectile_fired_event.h
     src/flatbufferschemas
     src/game.cpp
     src/game.h
