--- a/src/rawassets/config.json
+++ b/src/rawassets/config.json
@@ -64,6 +64,10 @@
         {
           "data_type": "ListenerDef",
           "data" : {}
+        },
+        {
+          "data_type": "ScoreDef",
+          "data" : {}
         }
       ]
     }
