Fix a cmake error that slipped in when renaming files. Whoops.
Change-Id: Ibca13c5dccd1fe518ee699b71073ce3c85b31751

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -179,8 +179,9 @@ set(zooshi_SRCS
     src/events/audio_event.h
     src/events/entity_event.h
     src/events/event_ids.h
-    src/events/patron_collision_event.h
-    src/events/patron_fed_event.h
+    src/events/hit_patron.h
+    src/events/hit_patron_body.h
+    src/events/hit_patron_mouth.h
     src/events/projectile_fired_event.h
     src/flatbufferschemas
     src/game.cpp
