Added editor camera movement using mouse and WASD-RF.
F10 toggles edit mode; in edit mode, moving the mouse changes your
facing, WASD moves forward and side-to-side relative to the ground,
and R-F moves up and down.

Change-Id: I6c1d1972805a9c0ff4f190770e882040f6fd5c03

--- a/src/rawassets/config.json
+++ b/src/rawassets/config.json
@@ -146,7 +146,12 @@
 
   "world_editor_config" : {
     "viewport_angle_degrees":90,
-    "movement_speed":1
+    "movement_speed":0.08,
+    "input_config": {
+      "mouse_sensitivity": 0.001,
+      "invert_x": false,
+      "invert_y": false
+    }
   },
 
   "patron_def": {
