Switched references from audio_engine to pindrop.
Before Pindrop had an official name it was just in a generic
'audio_engine' directory. Now that I have the pindrop directory set up
and working I'm redirecting refereces to it there.

Tested on Linux and Android.
Bug: 21370448

Change-Id: I27dd5a3bbe5b4c27b28bb12094dcdfba71bbfa39

--- a/disttools/config.json
+++ b/disttools/config.json
@@ -41,7 +41,7 @@
       "push": 0
     },
     {
-      "name": "audio_engine",
+      "name": "pindrop",
       "url": "http://github.com/google/pindrop.git",
       "branch": "develop",
       "is_library": 1,
