--- a/src/rawassets/config.json
+++ b/src/rawassets/config.json
@@ -84,6 +84,34 @@
           "data" : {}
         }
       ]
+    },
+
+    // Ground physics
+    {
+      "component_list": [
+        {
+          "data_type": "PhysicsDef",
+          "data": {
+            "shape": {
+              "data_type": "BulletStaticPlaneDef",
+              "data": {
+                "normal": {
+                  "x": 0,
+                  "y": 0,
+                  "z": -1
+                },
+                "constant": 0
+              }
+            },
+            "mass": 0,
+            "restitution": 1.0
+          }
+        },
+        {
+          "data_type": "TransformDef",
+          "data": {}
+        }
+      ]
     }
   ],
 
@@ -147,7 +175,19 @@
       "component_list": [
         {
           "data_type": "PhysicsDef",
-          "data": {}
+          "data": {
+            "shape": {
+              "data_type": "BulletBoxDef",
+              "data": {
+                "half_extents": {
+                  "x": 0.5,
+                  "y": 0.5,
+                  "z": 0.5
+                }
+              }
+            },
+            "restitution": 1.0
+          }
         },
         {
           "data_type": "TimeLimitDef",
@@ -190,7 +230,12 @@
       "component_list": [
         {
           "data_type": "PhysicsDef",
-          "data": {}
+          "data": {
+            "shape": {
+              "data_type": "BulletNoShapeDef",
+              "data": {}
+            }
+          }
         },
         {
           "data_type": "TimeLimitDef",
