Fix Mac build having issues with Bullet
Building bullet causes a couple of warnings, which get treated as
errors. Adding compile flags for the Mac build to ignore them.

Change-Id: I2e89e5ff1b4b405a6d01428a592edac23c452ebd

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -242,6 +242,12 @@ elseif(CMAKE_COMPILER_IS_GNUCC OR CMAKE_COMPILER_IS_GNUCXX OR
     "${CMAKE_CXX_FLAGS} -std=c++0x -Wall -pedantic -Werror -Wextra -Wno-unused-function")
   # -Wno-unused-function is because of webp encode.h
 endif()
+if(APPLE)
+  set(CMAKE_CXX_FLAGS
+    "${CMAKE_CXX_FLAGS} -Wno-ignored-qualifiers -Wno-overloaded-virtual")
+  # These additional flags are needed because of Bullet's btSolverBody.h and
+  # btConvexHullShape.h causing warnings with the Apple build
+endif()
 set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${C_FLAGS_WARNINGS}")
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${C_FLAGS_WARNINGS}")
 
