Fixed incorrect upstream branch name for fplbase.
Tested:
Verified it's possible to push zooshi to github with the new config.

Change-Id: Id7fb4a117c873c37c79cbbd69517a46ce53b03c4

--- a/disttools/config.json
+++ b/disttools/config.json
@@ -67,7 +67,7 @@
     {
       "name": "fplbase",
       "url": "http://github.com/google/zooshi.git",
-      "branch": "sdl",
+      "branch": "fplbase",
       "is_library": 1,
       "third_party": 0,
       "push": 1
