Added blob shadow.
They also render for the patrons that are currently rendered underground.
The shadows can be culled once these guys are culled.

Tested: on Linux.

Change-Id: Ifb8dfdea80477e981eb507f1c3d5bfa06f4da65a
Tested: on Linux.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -193,6 +193,8 @@ set(zooshi_SRCS
     src/components/services.h
     src/components/sound.cpp
     src/components/sound.h
+    src/components/shadow.cpp
+    src/components/shadow.h
     src/components/time_limit.cpp
     src/components/time_limit.h
     src/components/transform.cpp
