Events can now be specified in data.
This is a pretty large change to how events are piped around the game.
Rather than have events that represent certain kinds of events that
happened in game (like patrons getting hit), there are events for
different kinds of actions you want to take.

To that end, PatronHit events have been removed and been replaced with
AttributeModification events. Also a ChangeRailSpeed event has been
added, but it is nonfunctional until Motive supports applying a scale to
a spline.

Added an ActionDef schema which represents an action that can be taken
in response to an event. These ActionDefs have been hooked up in various
locations in the config file, such as on patrons and physics objects so
that they can be broadcast when appropriate.

Added a ParseAction function that can turn the ActionDef into an actual
action object given the current context and passes it to the event
manager to be handled.

Also changed the name of the score component to attribute component.

Tested on Linux and Android.

Change-Id: I47d80391e82f16274b19eede3572fb0f16765529

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -158,6 +158,8 @@ add_custom_command(TARGET assets POST_BUILD
 set(zooshi_SRCS
     src/camera.cpp
     src/camera.h
+    src/components/attributes.cpp
+    src/components/attributes.h
     src/components/audio_listener.cpp
     src/components/audio_listener.h
     src/components/patron.cpp
@@ -172,8 +174,6 @@ set(zooshi_SRCS
     src/components/rail_denizen.h
     src/components/rendermesh.cpp
     src/components/rendermesh.h
-    src/components/score.cpp
-    src/components/score.h
     src/components/sound.cpp
     src/components/sound.h
     src/components/time_limit.cpp
@@ -195,13 +195,13 @@ set(zooshi_SRCS
     src/event_system/event_manager.h
     src/event_system/event_payload.h
     src/event_system/event_registry.h
-    src/events/entity.h
-    src/events/event_ids.h
-    src/events/hit_patron.h
-    src/events/hit_patron_body.h
-    src/events/hit_patron_mouth.h
+    src/events/change_rail_speed.h
+    src/events/modify_attribute.h
+    src/events/parse_action.cpp
+    src/events/parse_action.h
     src/events/play_sound.h
-    src/events/projectile_fired.h
+    src/events/utilities.cpp
+    src/events/utilities.h
     src/flatbufferschemas
     src/game.cpp
     src/game.h
