Adds Collision handling through Bullet physics
Uses Bullet to generate collision events, which are in used by patron
to determine when one has been fed.  Attaches simple billboard physics
definitions to the various patrons.

Adds a way to specify an offset of the collision shape from the main
transform, along with a way to mark a body as kinematic.

Change-Id: I9ec85f00dee3c51da4953a24eebada0e9ec3f104

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -196,6 +196,7 @@ set(zooshi_SRCS
     src/event_system/event_payload.h
     src/event_system/event_registry.h
     src/events/change_rail_speed.h
+    src/events/collision.h
     src/events/modify_attribute.h
     src/events/parse_action.cpp
     src/events/parse_action.h
