--- a/src/rawassets/config.json
+++ b/src/rawassets/config.json
@@ -164,6 +164,29 @@
           }
         },
         {
+          "data_type": "PhysicsDef",
+          "data": {
+            "shape": {
+              "data_type": "BulletBoxDef",
+              "data": {
+                "half_extents": {
+                  "x": 6.0,
+                  "y": 2.0,
+                  "z": 12.0
+                }
+              }
+            },
+            "offset": {
+              "x": 0,
+              "y": 0,
+              "z": 10
+            },
+            "mass": 100.0,
+            "restitution": 1.0,
+            "kinematic": true
+          }
+        },
+        {
           "data_type": "PatronDef",
           "data": {}
         }
@@ -214,6 +237,29 @@
                 ]
               }
             ]
+          }
+        },
+        {
+          "data_type": "PhysicsDef",
+          "data": {
+            "shape": {
+              "data_type": "BulletBoxDef",
+              "data": {
+                "half_extents": {
+                  "x": 6.0,
+                  "y": 2.0,
+                  "z": 12.0
+                }
+              }
+            },
+            "offset": {
+              "x": 0,
+              "y": 0,
+              "z": 10
+            },
+            "mass": 100.0,
+            "restitution": 1.0,
+            "kinematic": true
           }
         },
         {
@@ -270,6 +316,29 @@
           }
         },
         {
+          "data_type": "PhysicsDef",
+          "data": {
+            "shape": {
+              "data_type": "BulletBoxDef",
+              "data": {
+                "half_extents": {
+                  "x": 6.0,
+                  "y": 2.0,
+                  "z": 12.0
+                }
+              }
+            },
+            "offset": {
+              "x": 0,
+              "y": 0,
+              "z": 10
+            },
+            "mass": 100.0,
+            "restitution": 1.0,
+            "kinematic": true
+          }
+        },
+        {
           "data_type": "PatronDef",
           "data": {
             "on_collision": {
@@ -307,11 +376,16 @@
               "data_type": "BulletBoxDef",
               "data": {
                 "half_extents": {
-                  "x": 0.5,
-                  "y": 0.5,
-                  "z": 0.5
+                  "x": 1.5,
+                  "y": 0.8,
+                  "z": 0.8
                 }
               }
+            },
+            "offset": {
+              "x": 0.0,
+              "y": 0.0,
+              "z": 0.8
             },
             "restitution": 1.0
           }
